# brileta

./: .clang-format  .clang-tidy  .gitignore  .llm_pack_presets  AGENTS.md  CONTRIBUTING.md  LICENSE  LIGHTING_SYSTEM_PLAN.md  MODERNGL_OPTIMIZATION_PLAN.md  MODERNGL_RENDERING_ARCHITECTURE.md  Makefile  NOTICE  README.md  WGPU_MIGRATION_PLAN.md  brileta.spec  design_notes.md  pyproject.toml  run_brileta.py  run_catley.py  setup.py  test_attack_migration.py
.githooks/: post-checkout
.github/workflows/: build-distributables.yml
benchmarks/: REALISTIC_MODERNGL_BASELINE.md  realistic_moderngl_baseline.json
brileta/: __main__.py  app.py  colors.py  config.py  controller.py  events.py  input_events.py  input_handler.py  move_intent_generator.py  types.py
brileta/backends/: gl_window.py  miniaudio_audio.py  sounddevice_audio.py
brileta/constants/: __init__.py  combat.py  movement.py
brileta/environment/: fov.py  map.py  tile_types.py
brileta/game/: action_plan.py  action_router.py  clock.py  consequences.py  countables.py  enums.py  game_world.py  item_spawner.py  lights.py  names.py  outfit.py  ranges.py  turn_manager.py
brileta/modes/: __init__.py  base.py  combat.py  explore.py  picker.py
brileta/sound/: __init__.py  definitions.py  emitter.py  loader.py  materials.py  system.py  weapon_sounds.py
brileta/sprites/: __init__.py  boulders.py  characters.py  common.py  primitives.py  quadrupeds.py  trees.py
brileta/testing/: __init__.py  sim_harness.py
brileta/util/: _native.c  _native.pyi  caching.py  clock.py  coordinates.py  dice.py  glyph_buffer.py  live_vars.py  message_log.py  metric_dump.py  metrics.py  noise.py  parallel.py  pathfinding.py  rng.py  spatial.py  tilesets.py
brileta/view/: animation.py  frame_manager.py  presentation.py
catley/: __main__.py  _test_pyglet_render.py  actions.py  app.py  clock.py  colors.py  combat.py  conditions.py  config.py  controller.py  dice.py  engine.py  event_handler.py  events.py  fov.py  input_events.py  input_handler.py  items.py  lighting.py  main.py  menu_system.py  message_log.py  model.py  move_intent_generator.py  movement_handler.py  play_mode.py  render.py  render_old.py  tile_types.py  turn_manager.py  types.py
catley/backends/: gl_window.py  sounddevice_audio.py
catley/constants/: __init__.py  combat.py  movement.py  physics.py  rendering.py  ui.py  view.py
catley/environment/: fov.py  generators.py  map.py  tile_types.py
catley/game/: action_plan.py  action_router.py  actions.py  actors.py  ai.py  components.py  conditions.py  consequences.py  countables.py  entities.py  enums.py  game_world.py  item_spawner.py  items.py  lights.py  outfit.py  pathfinding_goal.py  range_system.py  ranges.py  status_effects.py  turn_manager.py
catley/modes/: __init__.py  base.py  combat.py  explore.py  picker.py  targeting.py
catley/render/: effects.py  frame_manager.py  lighting.py  old_render.py  particles.py  render.py  renderer.py  screen_shake.py
catley/scripts/: benchmark_canvases.py  benchmark_glyph_buffer.py  benchmark_spatial.py  benchmark_text_backends.py
catley/sound/: __init__.py  audio_backend.py  definitions.py  emitter.py  loader.py  materials.py  system.py  weapon_sounds.py
catley/ui/: cursor_manager.py  help_menu.py  inventory_menu.py  menu_core.py  menu_system.py  message_log.py  message_log_panel.py  panel.py  pickup_menu.py  target_menu.py  ui_commands.py
catley/util/: _native.c  _native.pyi  _native_fov.c  _native_pathfinding.c  _native_wfc.c  caching.py  clock.py  coordinates.py  dice.py  glyph_buffer.py  live_vars.py  message_log.py  metric_dump.py  metrics.py  misc.py  pathfinding.py  performance.py  rng.py  spatial.py  tilesets.py
catley/view/: animation.py  frame_manager.py  presentation.py  renderer.py  text_backend.py  viewport.py
catley/world/: game_state.py  map.py  tile_types.py  tiles.py
docs/: AUDIO_IMPROVEMENT_PLAN.md  LIGHTING_SYSTEM_PLAN.md
docs/arch/: MODERNGL_RENDERING_ARCHITECTURE.md  design_notes.md
docs/plan/: AUDIO_IMPROVEMENT_PLAN.md  LIGHTING_SYSTEM_PLAN.md  WGPU_MIGRATION_PLAN.md
packaging/: README.md  brileta_launcher.py
scripts/: benchmark_canvases.py  benchmark_fov.py  benchmark_pathfinding.py  benchmark_realistic_performance.py  benchmark_spatial.py  benchmark_sprites.py  benchmark_tree_sprites.py  benchmark_wfc.py  character_prototype.py  generate_cloud_noise.py  instrumented_spatial.py  quadruped_judge_render.py  quadruped_prototype.py
tests/: conftest.py  helpers.py  test_action_browser_menu.py  test_action_discovery.py  test_action_router.py  test_active_weapon_switch.py  test_animation.py  test_area_effect.py  test_attack_consequences.py  test_attack_mode_selection.py  test_attack_screen_shake.py  test_autopilot.py  test_caching.py  test_canvases.py  test_clock.py  test_combat_arbiter.py  test_combat_cover.py  test_combat_resolver.py  test_condition_treatment.py  test_context_menu.py  test_coordinates.py  test_d20_resolver.py  test_debug_stats_overlay.py  test_dev_console_overlay.py  test_dice.py  test_door_actions.py  test_effects_integration.py  test_environmental.py  test_events.py  test_exhaustion_effects.py  test_frame_manager_viewport.py  test_game_loop.py  test_glyph_buffer.py  test_highlight.py  test_hostile_ai.py  test_injury_effects.py  test_input_handler.py  test_inventory.py  test_inventory_menu.py  test_item_weapon_methods.py  (+43 more)
tests/environment/: test_environmental.py  test_fov.py  test_map_doors.py  test_map_generators.py  test_map_sun_shadow_grid.py  test_player_torch.py  test_tile_types.py
tests/game/: test_action_plan.py  test_countables.py  (+9 more)
(+598 files in other folders)
