[project]
name = "catley"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "moderngl>=5.12.0",
    "numpy>=2.2.6",
    "pillow>=11.2.1",
    "pyglet>=2.1.6",
    "tcod>=18.1.0",
    "wgpu>=0.22.2",
]

[tool.setuptools.packages.find]
where = ["catley"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.ruff.lint]
select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "B",        # flake8-bugbear: Catche subtle performance/logic issues
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "PTH",      # Use pathlib instead of os.path
    "PERF",     # Performance anti-patterns
    "RUF",      # Ruff-specific rules
]

[tool.pyright]
reportAttributeAccessIssue = "none"

[dependency-groups]
dev = [
    "py-spy>=0.4.0",
    "pyright>=1.1.402",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
]
