[project]
name = "catley"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "glfw>=2.9.0",
    "moderngl>=5.12.0",
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    "soundfile>=0.13.1",
    "tcod>=18.1.0",
    "wgpu>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["catley"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
filterwarnings = [
    "ignore:There is no current event loop:DeprecationWarning:wgpu.gui.glfw",
]

[tool.ruff.lint]
select = [
    "A",        # detect shadowed builtins
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "B",        # flake8-bugbear: Catche subtle performance/logic issues
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "PTH",      # Use pathlib instead of os.path
    "PERF",     # Performance anti-patterns
    "RUF",      # Ruff-specific rules
    "NPY",      # Some numpy-specific things
    "Q",        # Linting rules for quites
    "PYI",      # Linting rules for type annotations.
    "LOG",      # Checks for issues using the standard library logging module.
]

[tool.pyright]
reportAttributeAccessIssue = "none"

[dependency-groups]
dev = [
    "py-spy>=0.4.0",
    "pyright>=1.1.402",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
]
