[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catley"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "glfw>=2.9.0",
    "numpy>=2.3.2",
    "pillow>=12.0.0",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "wgpu>=0.29.0",
    "rendercanvas>=2.4.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -n auto --dist=worksteal"
filterwarnings = []

[tool.ruff.lint]
# The formatter handles line length where it can.
# E501 has no autofix, so enabling it just creates unfixable violations for edge cases.
ignore = ["E501"]
select = [
    "A",        # detect shadowed builtins
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "B",        # flake8-bugbear: Catche subtle performance/logic issues
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "PTH",      # Use pathlib instead of os.path
    "PERF",     # Performance anti-patterns
    "RUF",      # Ruff-specific rules
    "NPY",      # Some numpy-specific things
    "Q",        # Linting rules for quites
    "PYI",      # Linting rules for type annotations.
    "LOG",      # Checks for issues using the standard library logging module.
]

[tool.ty.rules]
# ty bugs/limitations (remove as ty matures)
invalid-base = "ignore"            # Protocol inheritance false positive
invalid-context-manager = "ignore" # nullcontext false positive

[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
invalid-assignment = "ignore"  # Mock assignments in tests

[dependency-groups]
dev = [
    "py-spy>=0.4.0",
    "pyinstaller>=6.17.0",
    "pytest>=8.4.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.0",
    "ty>=0.0.13",
]
